# urirun-connector-work

./: README.md  pyproject.toml
.planfile/: config.yaml
.planfile/sprints/: current.yaml.fast.json
scripts/: run_signal_ticket_e2e.py
tests/: test_e2e_control_plane.py  test_executor.py  test_executor_escalation.py  test_gates.py  test_goal_delivery.py  test_goal_gate.py  test_goal_observe.py  test_grant_pack_gate.py  test_koru_shim.py  test_locate_query.py  test_postcondition.py  test_signal_kvm.py  test_signal_scripted.py  test_ticket_source.py  test_unblock_persist.py  test_work.py  test_work_gate.py  test_worker_cycle.py
urirun_connector_work/: __init__.py  core.py  executor.py  gates.py  goal.py  goal_gate.py  koru_shim.py  postcondition.py  signal_kvm.py  ticket_source.py  work_gate.py
urirun_connector_work.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
urirun_connector_work/.planfile/: config.yaml
urirun_connector_work/.planfile/sprints/: current.yaml.fast.json
