[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
[project]
name = "urirun-connector-work"
version = "0.2.0"
description = "work:// control plane — lock-aware leases so a worker fleet clears the backlog in parallel without conflicts"
requires-python = ">=3.10"
dependencies = [
  "urirun",
  "urirun-work @ https://github.com/if-uri/urirun-work/archive/refs/tags/v0.2.0.tar.gz",
]
[project.entry-points."urirun.bindings"]
work = "urirun_connector_work.core:urirun_bindings"
[project.scripts]
urirun-work-koru-shim = "urirun_connector_work.koru_shim:main"
[tool.setuptools]
packages = ["urirun_connector_work"]
